# cpp-course-2024

./: .gitignore  README.md
Ch02_Starting_Well/: Starting_Well.sln
Ch02_Starting_Well/MyLibrary/: Factorial.h  MyLibrary.cpp  MyLibrary.vcxproj  MyLibrary.vcxproj.filters  ReadMe.txt  SafeVector.h
Ch02_Starting_Well/UnitTests/: UnitTests.cpp  UnitTests.vcxproj
Ch03_Robust_Design/: CMakeLists.txt
Ch04_Copy_Conv/: CMakeLists.txt
Ch05_Move/src/: Test_Move.cpp  (+1 more)
Ch06_Strong_Primitive_Types/: Strong_Primitive_Types.sln
Ch07_Operator_Overloading/: Operator_Overloading.sln
Ch08_Robust_Constructors/: Robust_Constructors.sln
Ch09_Exception_Handling/: Exception_Handling.sln
Ch10_Bitfields_Unions/: Bitfields_Unions.sln
Ch11_Delegation_Techniques/: CMakeLists.txt  Delegation_Techniques.sln
Ch12_Statics_Globals/: CMakeLists.txt  Statics_Globals.sln
Ch13_Volatile_Variables/: CMakeLists.txt  Volatile_Variables.sln
Ch14_Multithreading/: CMakeLists.txt  Multithreading.sln  Robust_Constructors.opensdf
Ch14_Multithreading/solution4/: CMakeLists.txt
Ch14_Multithreading/solution4/header/: Mock_Clock.h
Ch15_Polymorphism/: CMakeLists.txt  Polymorphism.sln
Ch16_Safe_Association/: CMakeLists.txt  Safe_Association.sln
Ch17_Design_Patterns/: CMakeLists.txt  Design_Patterns.sln
Ch18_Functional_Abstraction/: CMakeLists.txt  Functional_Abstraction.sln
Ch19_Containers/: CMakeLists.txt  Containers.sln
Ch19_Containers/Containers/: Containers.vcxproj  Test_Containers.cpp
Ch19_Containers/Containers/Debug/: makefile
Ch19_Containers/Containers_Sol.1/: Containers_Sol.1.vcxproj
Ch19_Containers/Containers_Sol.1/Debug/: makefile
Ch19_Containers/Containers_Sol.2/: Containers_Sol.2.vcxproj
Ch19_Containers/Containers_Sol.2/Debug/: makefile  objects.mk
Ch19_Containers/Containers_Sol.3/: Containers_Sol.3.vcxproj  Scheduler.h
Ch19_Containers/Containers_Sol.3/Debug/: makefile
Ch19_Containers/Containers_Sol.4/: Containers_Sol.4.vcxproj  Scheduler.cpp  Test_Containers.cpp
Ch19_Containers/Containers_Sol.4/Debug/: makefile  subdir.mk
Ch19_Containers/Solution1/header/: Scheduler.h
Ch19_Containers/Solution1/src/: Scheduler.cpp
Ch19_Containers/Solution2/header/: Scheduler.h
Ch19_Containers/Solution2/src/: Scheduler.cpp
Ch19_Containers/Solution3/: CMakeLists.txt
Ch19_Containers/Solution3/src/: Scheduler.cpp
Ch19_Containers/Solution4/header/: Scheduler.h
Ch19_Containers/Time_Library/: Events.h  Mock_Clock.cpp  Time_Library.vcxproj  Time_Library.vcxproj.filters  stdafx.h
Ch19_Containers/Time_Library/Debug/: makefile
Ch19_Containers/header/: Scheduler.h
Ch19_Containers/src/: Scheduler.cpp
Robust_Design_Sol/: CMakeLists.txt
(+353 files in other folders)
